--- a/sass/main.scss
+++ b/sass/main.scss
@@ -47,11 +47,42 @@ $theme-colors: (
   .contenedor .subcontenedor {
     min-height: 110vh;
   }
+
+  .row-1.flex-md-row {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .logos img{
+    margin-right: 20px; 
+    margin-left: 10px;
+  }
+
+  .img-fluid {
+    max-width: 100%;
+    height: auto;
 }
+
+}
+
 @media (min-width: 776px) {
   .contenedor .subcontenedor {
     min-height: 60vh; /* Ajusta la altura para pantallas más grandes */
   }
+
+  .logos {
+    position: relative;
+    margin-left: auto;
+    margin-right: 50px;
+  }
+
+  .img-fluid {
+    max-width: 100%;
+    height: auto;
+    margin-left: auto;
+    margin-right: 50px;
+}
+
 }
 /*li:hover {
   text-decoration: underline;
@@ -214,9 +245,46 @@ $theme-colors: (
   /*padding-bottom: 0px;*/
   margin: 0 auto;
 }
+// //Alineación de boton contact us con email
+// .form-group{
+//   width: 100%;
+//   max-width: 300px;
+//   margin: 0 auto;
+// }
 
+.btn-contact-us{
+  width: 100%;
+  max-width: 90px;
+  margin-top: 10px;
+  font-size: 12px !important;
+  padding: 10px 4px 10px 4px !important;
+  margin-left: 10px;
+  margin-top: 5px !important;
+}
+
+// .form-container {
+//   display: flex;
+//   flex-direction: column;
+//   align-items: center;
+//   justify-content: center;
+//   text-align: center;
+// }
+
+// .form-container {
+//   width: 100%;
+//   max-width: 400px; /* Puedes ajustar este valor según sea necesario */
+//   margin: 0 auto;
+//   padding: 20px;
+//   background-color: #ffffff; /* Puedes ajustar el color de fondo según sea necesario */
+//   border-radius: 8px; /* Puedes ajustar el radio de borde según sea necesario */
+//   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Puedes ajustar la sombra según sea necesario */
+// }
+
+
+
+//acaba alineación
 .form-control {
-  width: 75%;
+  width: 100%;
   max-width: none;
   min-width: 50%;
   display: flex;
@@ -233,13 +301,13 @@ $theme-colors: (
   align-items: center;
 }
 
-.d-flex {
+/*.d-flex {
   margin: 0 auto;
   display: flex;
   justify-content: center;
   text-align: center;
   align-items: center;
-}
+}*/
 
 /*.d-block{
   display: flex;
@@ -248,6 +316,7 @@ $theme-colors: (
   align-items: flex-start;
   margin: 0 auto;
 }*/
+
 .bookmark-logo {
   width: auto;
   margin: 0 auto;
@@ -260,9 +329,11 @@ $theme-colors: (
 .footer-elementos {
   display: inline-block;
   text-align: left;
-  padding-inline-start: 2px;
-  margin: 0;
+  //padding-inline-start: 2px;
+  margin: 1px auto;
   width: auto;
+  margin-left: 20px;
+  margin-right: 10px;
 }
 
 .footer2 {
@@ -278,7 +349,7 @@ body {
   font-family: "Rubik", sans-serif;
   height: 100% !important;
   background-color: #F8F9FB !important;
-  max-width: 99%;
+  max-width: 100%;
 }
 
 .container-fluid, .container-sm, .container-md, .container-lg, .container-xl, .container-xxl {
@@ -349,9 +420,9 @@ footer {
 }
 
 .form-control {
-  text-decoration: underline;
+  //text-decoration: underline;
   color: black;
-  text-align: center;
+  text-align: start;
 }
 
 .invalid-tooltip {
@@ -531,13 +602,13 @@ margin: 0 auto;
   background-color: #5265E1;
   width: 100%;
   height: 100%;
-  padding: 50px;
+  padding: 2px;
   /*padding-bottom: 0px;*/
   margin: 0 auto;
 }
 
 .form-control {
-  width: 75%;
+  width: 105%;
   max-width: none;
   min-width: 50%;
   display: flex;
@@ -556,13 +627,23 @@ margin: 0 auto;
   
 }
 
-.d-flex{
+.emailValidation {
   margin: 0 auto;
   display: flex;
   justify-content: center;
   text-align: center;
   align-items: center;
 }
+
+
+/*.d-flex{
+  margin: 0 auto;
+  display: flex;
+  justify-content: center;
+  text-align: center;
+  align-items: center;
+}*/
+
 
 /*.d-block{
   display: flex;
@@ -574,7 +655,8 @@ margin: 0 auto;
 
 .bookmark-logo {
   width: auto;
-  margin: 0 auto;
+  //margin: 0 auto;
+  margin-inline-start: 25%;
 }
 
 .d-none{
@@ -582,12 +664,13 @@ margin: 0 auto;
 }
 
 .footer-elementos {
- display: inline-block;
- text-align: left;
- padding-inline-start: 2px;
- margin: 0;
- width: auto;
-
+  display: inline-block;
+  text-align: left;
+  //padding-inline-start: 2px;
+  margin: 1px auto;
+  width: auto;
+  margin-left: 20px;
+  margin-right: 10px;
 }
 
 .footer2 {
@@ -596,6 +679,10 @@ margin: 0 auto;
   justify-content: flex-start;
   align-items: flex-start;
   width: 100%;
+}
+
+.social{
+  margin-left: 20px;
 }
 
 
@@ -608,7 +695,8 @@ body {
     font-family: 'Rubik', sans-serif;
     height: 100% !important;
     background-color: #F8F9FB !important;
-    max-width: 99%;
+    max-width: 100%;
+    margin-bottom: 0;
 }
 
 .container-fluid{
@@ -685,10 +773,14 @@ button {
 }
 
 .form-control {
-  text-decoration: underline;
+  //text-decoration: underline;
   color: black;
-  text-align: center;
+  text-align: start;
 } 
+
+.row {
+  --bs-gutter-x: 0;
+}
 
 .invalid-tooltip{
   position: absolute;
@@ -699,3 +791,28 @@ button {
   left: 0; 
   width: 100%;
 }
+
+body {
+  overflow-x: hidden;
+}
+
+.py-5 {
+  padding-top: 3rem !important;
+  padding-bottom: 0rem !important;
+}
+
+.img-fluid {
+  max-width: 100%;
+  height: auto;
+  margin: 0 auto;
+}
+
+.img-fluid-logos {
+  max-width: 100%;
+  height: auto;
+  margin-left: 50px;
+  margin-right: 20px;
+}
+
+
+
